Desafio Final - Envio de E-mails

--- a/bootcamp/desafiofinal/fastfeet/backend/src/app/views/emails/cancel.hbs
+++ b/bootcamp/desafiofinal/fastfeet/backend/src/app/views/emails/cancel.hbs
@@ -1,7 +1,10 @@
 <strong>Olá, {{ deliveryman }}</strong>
-<p>Você possui uma nova entrega à ser feita. Confira abaixo os detalhes da Entrega:</p>
+<p>A Entrega abaixo foi cancelada pelo seguinte problema.</p>
 <p>
+  <strong>Problema: </strong>{{ problem }} <br /><br />
+
   <strong>Produto: </strong> {{ product }} <br /><br />
+
   <strong>Destinatário: </strong> {{ recipient }} <br />
   <strong>Endereço: </strong> {{ address }} <br />
   <strong>Número: </strong> {{ number }} <br />
